fix spacing between tree items

--- a/public/index.css
+++ b/public/index.css
@@ -22,6 +22,8 @@ ul {
   list-style-type: dot;
 }
 
+li:has(li) { margin-bottom: 1.5rem; }
+
 input {
   width: 92%;
   border-width: 0px;
